--- a/index.html
+++ b/index.html
@@ -62,6 +62,64 @@
 								<use href="./images/svg/symbol-cross.svg#icon-cross"></use>
 							</svg>
 						</button>
+						<h3 class="form-title">Leave your contacts and we will call you back</h3>
+						<form class="form-modal form" action="" autocomplete="off">
+							<div class="form-group">
+								<label class="label-modal">
+									<span class="inpute-name">Name</span>
+
+									<input type="text" name="username" placeholder="Name*" required />
+									<span class="input-span-icon">
+										<svg class="input-icon" width="18" height="24">
+											<use href="./images/svg/symbol-modal-icons.svg#icon-person"></use>
+										</svg>
+									</span>
+								</label>
+							</div>
+							<div class="form-group">
+								<label class="label-modal">
+									<span class="inpute-name">Phone</span>
+									<input type="tel" name="phone" placeholder="Phone*" required />
+									<span class="input-span-icon">
+										<svg class="input-icon" width="18" height="24">
+											<use href="./images/svg/symbol-modal-icons.svg#icon-phone"></use>
+										</svg>
+									</span>
+								</label>
+							</div>
+							<div class="form-group">
+								<label class="label-modal">
+									<span class="inpute-name">Email</span>
+									<input type="email" name="email" placeholder="Email*" />
+									<span class="input-span-icon">
+										<svg class="input-icon" width="18" height="24">
+											<use href="./images/svg/symbol-modal-icons.svg#icon-mail"></use>
+										</svg>
+									</span>
+								</label>
+							</div>
+							<div class="form-group">
+								<label class="label-modal last">
+									<span class="inpute-name">Comment</span>
+									<textarea class="modal-textarea" name="message" placeholder="Text input"></textarea>
+								</label>
+							</div>
+
+							<label class="label-checkbox">
+								<input class="checkbox" type="checkbox" name="checkbox-privacy-policy" />
+								<span class="checkbox-span-check">
+									<svg class="checkbox-icon" width="10" height="6">
+										<use href="./images/svg/symbol-checkbox.svg#icon-checkbox-icon"></use>
+									</svg>
+								</span>
+								I accept the terms and conditions of the
+								<span>
+									<a href="#">Privacy Policy</a>
+								</span>
+							</label>
+
+							<button class="button-send" type="submit">Send</button>
+						</form>
 					</div>
 				</div>
 			</section>
@@ -383,6 +441,18 @@
 						</li>
 					</ul>
 				</div>
+				<form class="subscribe-form">
+					<label class="foter-subject-two">Subscribe</label>
+					<div class="footer-form">
+						<input class="input-footer" type="email" name="email" autocomplete="off" placeholder="E-mail" required />
+						<button type="submit" class="button-subscribe">
+							Subscribe
+							<svg class="subscribe-svg" width="24" height="20">
+								<use href="./images/svg/symbol-subscribe.svg#icon-subscribe"></use>
+							</svg>
+						</button>
+					</div>
+				</form>
 			</div>
 		</footer>
 		<!-- Footer_Section -->
